[package]
name = "midnight"
version = "0.1.0"
authors = ["alex"]

[dependencies]
piston = "0.27.0"
sdl2 = "0.27.3"
pistoncore-sdl2_window = "0.38.0"
fps_counter = "0.2.0"
piston2d-opengl_graphics = "0.36.1"
piston2d-graphics = "0.19.0"
piston2d-sprite = "0.31.0"
find_folder = "0.3.0"
uuid = "0.1.18"
cgmath = "0.12.0"
gl = "0.6.1"
rand = "0.3.14"
image = "0.10.4"
